[gd_scene load_steps=3 format=2]

[ext_resource path="res://1D User Interface/Idle Game/Scripts/Main Game.gd" type="Script" id=1]
[ext_resource path="res://1D User Interface/Idle Game/Button.tscn" type="PackedScene" id=2]

[node name="Idle Game Example" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Clickable Thing" type="Button" parent="."]
margin_left = 25.0
margin_top = 25.0
margin_right = 325.0
margin_bottom = 325.0
text = "Cookie"

[node name="TextItem" type="RichTextLabel" parent="."]
margin_left = 26.0
margin_top = 325.0
margin_right = 326.0
margin_bottom = 365.0
text = "Example
Example"

[node name="Button" parent="." instance=ExtResource( 2 )]
margin_left = 825.0
margin_top = 25.0
margin_right = 975.0
margin_bottom = 90.0

[node name="ClickProgressBar" type="ProgressBar" parent="."]
margin_left = 25.0
margin_top = 360.0
margin_right = 175.0
margin_bottom = 375.0
rounded = true
percent_visible = false

[node name="IdleProgressBar" type="ProgressBar" parent="."]
margin_left = 25.0
margin_top = 390.0
margin_right = 175.0
margin_bottom = 405.0
rounded = true
percent_visible = false

[connection signal="pressed" from="Clickable Thing" to="." method="ClickedItemButton"]
[connection signal="value_changed" from="ClickProgressBar" to="." method="ClickProgress"]
[connection signal="value_changed" from="IdleProgressBar" to="." method="IdleProgress"]
